--- a/css/style.css
+++ b/css/style.css
@@ -679,6 +679,7 @@ text-align: center;
     background-color:var(--white-cl);
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .close-tag-button:hover .close-tag-icon, 
@@ -799,6 +800,7 @@ text-align: center;
     margin: -1px;
     clip: rect(0 0 0 0);
     overflow: hidden;
+    
 }
 
 .checkbox-unchecked{
@@ -809,6 +811,7 @@ text-align: center;
     border-radius: 2px;
     visibility: visible;
     transition: visibility 200ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .checkbox:checked ~ .checkbox-unchecked{
