--- a/css/style.css
+++ b/css/style.css
@@ -735,6 +735,7 @@ text-align: center;
     padding: 0;
     width: 448px;
     height: 40px;
+    padding-left: 42px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -755,6 +756,7 @@ text-align: center;
     resize: none;
     width: 100%;
     height:120px;
+    padding: 12px 16px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
 }
@@ -767,7 +769,6 @@ text-align: center;
     line-height:1.14;
     letter-spacing: 0.01em;
     color: rgba(117, 117, 117, 0.5);
-    padding: 12px 16px;
     }
 
 .form-icon{
@@ -785,65 +786,36 @@ text-align: center;
 }
 
 .policy{
-    position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
 .checkbox{
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    border: 0;
-    padding: 0;
-    margin: -1px;
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-    
-}
-
-.checkbox-unchecked{
-    margin-right: 8px;
+    display:block;
+    margin-right: 9px;
     width: 16px;
     height: 15px;
-    border: 2px solid var(--title-cl);
+    border: 1.5px solid black;
     border-radius: 2px;
-    visibility: visible;
-    transition: visibility 200ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox:checked ~ .checkbox-unchecked{
-    visibility: hidden;
+.form-checkbox:focus ~ .checkbox{
+    border:1.5px solid var(--accent-cl);
 }
 
-.icon-check{
-    position: absolute;
-    left: 0;
-    opacity: 0;
-    width: 16px;
-    height: 15px;
-    fill:var(--white-cl);
-    border-radius: 2px;
-    background-color: var(--accent-cl);
-    background-origin: border-box;
-    transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.checkbox:checked ~ .icon-check{
-    opacity: 1;
-}
-
-.policy-label{
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.checkbox:checked ~ .policy-label{
-    transform: translateX(3px);
+.form-checkbox:checked + .checkbox{
+    background-color:var(--accent-cl);
+    border-color: var(--accent-cl);
+    background-image: url(../images/icons/check.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .policy-link{
+    padding-left: 0.3em;
+    display: block;
     color: var(--accent-cl);
 }
 
